# pagers

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASE.md  bacon.toml  bench.sh  cliff.toml  clippy.toml  flake.nix  om.yaml  release.sh  rust-toolchain.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml  mergify.yml
.github/workflows/: ci-nix.yml  ci.yml  docker.yml  flakehub.yml  flaky-test-detection.yml  release.yml  update-flake-lock.yml
.helix/: languages.toml
crates/pagers-cli/: Cargo.toml  build.rs
crates/pagers-cli/src/: cli.rs  daemon.rs  main.rs  output.rs  runop.rs  size_range.rs  tracing.rs
crates/pagers-cli/tests/: integration.rs
crates/pagers-core/: Cargo.toml
crates/pagers-core/benches/: residency.rs
crates/pagers-core/src/: cachestat.rs  crawl.rs  error.rs  events.rs  lib.rs  mincore.rs  mlock.rs  mmap.rs  mode.rs  ops.rs  output.rs  pagesize.rs  par.rs
crates/pagers-core/src/ops/: evict.rs  lock.rs  lockall.rs  mod.rs  process.rs  query.rs  touch.rs
crates/pagers-tui/: Cargo.toml
crates/pagers-tui/src/: app.rs  event.rs  lib.rs  state.rs  stats.rs  ui.rs
nix/modules/: ci.nix  container.nix  cross.nix  devshell.nix  pre-commit.nix  rust.nix  treefmt.nix
src/: crawl.rs  main.rs  mmap.rs  ops.rs  output.rs
