[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LilDojd/pagers"
homepage = "https://github.com/LilDojd/pagers"
readme = "README.md"

[workspace.dependencies]
bitvec = "1"
nix = "0.31"
pagers-core = { path = "crates/pagers-core", version = "0.1.1", default-features = false }
tempfile = "3"
humantime = "2"
tracing = "0.1.44"

[profile.release]
codegen-units = 1
lto = true
strip = true

[profile.perf]
inherits = "release"
debug = true
strip = false
