[package]
name = "pagers"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pagers"
path = "src/main.rs"

[dependencies]
pagers-core = { workspace = true }
pagers-tui = { workspace = true }
clap = { workspace = true, features = [
  "derive",
  "color",
  "help",
  "usage",
  "error-context",
] }
anstyle = { workspace = true }
libc = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[build-dependencies]
clap = { workspace = true, features = [
  "derive",
  "color",
  "help",
  "usage",
  "error-context",
] }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = ["tracing"] }
anstyle = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(pagers_normal_build)'] }
