[package]
name = "pagers"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pagers"
path = "src/main.rs"

[features]
default = ["bitvec"]
bitvec = ["pagers-core/bitvec", "pagers-tui/bitvec"]

[dependencies]
anstyle = "1.0.14"
clap = { version = "4", features = [
  "derive",
  "color",
  "help",
  "usage",
  "error-context",
] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = [
  "tracing",
] }
pagers-core = { workspace = true, default-features = false }
pagers-tui = { path = "../pagers-tui", default-features = false }
serde_json = "1"
nix = { workspace = true, features = ["fs", "process"] }
signal-hook = "0.4"
thiserror = "2"
tracing = { workspace = true }
tracing-subscriber = "0.3.23"

[build-dependencies]
anstyle = "1.0.14"
clap = { version = "4", features = [
  "derive",
  "color",
  "help",
  "usage",
  "error-context",
] }
clap_complete = "4"
clap_mangen = "0.2"
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = [
  "tracing",
] }
thiserror = "2"

[dev-dependencies]
tempfile = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(pagers_normal_build)'] }
