[package]
name = "pagers"
description = "Page cache diagnostics and control tool for Linux and macOS"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["page-cache", "cachestat", "mincore", "mlock", "diagnostics"]
categories = ["command-line-utilities", "filesystem", "os"]

[[bin]]
name = "pagers"
path = "src/main.rs"

[features]
default = ["bitvec", "rayon"]
bitvec = ["pagers-core/bitvec", "pagers-tui/bitvec"]
rayon = ["pagers-core/rayon"]

[dependencies]
anstyle = "1.0.14"
clap = { version = "4", features = [
  "derive",
  "color",
  "help",
  "usage",
  "error-context",
] }
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = [
  "tracing",
] }
pagers-core = { workspace = true, default-features = false }
pagers-tui = { path = "../pagers-tui", version = "0.1.0", default-features = false }
serde_json = "1"
nix = { workspace = true, features = ["fs", "process"] }
signal-hook = "0.4"
thiserror = "2"
tracing = { workspace = true }
tracing-subscriber = "0.3.23"

[build-dependencies]
anstyle = "1.0.14"
clap = { version = "4", features = [
  "derive",
  "color",
  "help",
  "usage",
  "error-context",
] }
clap_complete = "4"
clap_mangen = "0.2"
clap-verbosity-flag = { version = "3.0.4", default-features = false, features = [
  "tracing",
] }
thiserror = "2"

[dev-dependencies]
tempfile = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(pagers_normal_build)'] }
