[package]
name = "pagers-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = { workspace = true }
dashmap = "6"
ignore = "0.4"
libc = "0.2"
memmap2 = "0.9"
nix = { workspace = true, features = ["fs", "mman", "feature"] }
rayon = "1"
thiserror = "2"
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
