[package]
name = "pagers-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["bitvec"]
bitvec = ["dep:bitvec"]
serde = ["dep:serde", "bitvec?/serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
bitvec = { workspace = true, optional = true }
dashmap = "6"
lazy_static = "1"
ignore = "0.4"
libc = "0.2"
memmap2 = "0.9"
nix = { workspace = true, features = ["fs", "mman", "feature"] }
rayon = "1"
thiserror = "2"
tracing = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = { workspace = true }

[[bench]]
name = "residency"
harness = false
