[package]
name = "pagers-core"
description = "Core library for page cache diagnostics and control on Linux and macOS"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["page-cache", "cachestat", "mincore", "mlock", "filesystem"]
categories = ["filesystem", "os"]

[features]
default = ["bitvec", "rayon"]
bitvec = ["dep:bitvec"]
rayon = ["dep:rayon", "dep:dashmap"]
serde = ["dep:serde", "bitvec?/serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
bitvec = { workspace = true, optional = true }
dashmap = { version = "6", optional = true }
lazy_static = "1"
ignore = "0.4"
libc = "0.2"
memmap2 = "0.9"
nix = { workspace = true, features = ["fs", "mman", "feature"] }
rayon = { version = "1", optional = true }
thiserror = "2"
tracing = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = { workspace = true }

[[bench]]
name = "residency"
harness = false
