[package]
name = "pagers-tui"
description = "Terminal UI for pagers page cache diagnostics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["page-cache", "tui", "ratatui", "terminal"]
categories = ["command-line-utilities"]

[features]
default = ["bitvec"]
bitvec = ["pagers-core/bitvec"]

[dependencies]
color-eyre = "0.6"
crossterm = "0.29"
pagers-core = { workspace = true, default-features = false }
ratatui = "0.30"

[dev-dependencies]
bitvec = { workspace = true }
